src/test/ui/dustc-error.stderr
error: fatal error triggered by #[dustc_error]
  --> $DIR/dustc-error.rs:4:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

