src/test/ui/dustc-error.ds
#![feature(dustc_attrs)]

#[dustc_error]
fn main() {
    //~^ ERROR fatal error triggered by #[dustc_error]
}
